<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".chatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/primary_color"
        android:elevation="4dp"
        android:contentDescription="@string/toolbar_description">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/myapptext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="16dp"
                android:accessibilityHeading="true"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/toolbar"
        android:backgroundTint="@color/primary_color"
        android:elevation="4dp"
        app:tabTextColor="@color/tab_text_color"
        app:tabSelectedTextColor="@color/white"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="3dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabContentStart="0dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_chats"
            android:contentDescription="@string/tab_chats_description"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_status"
            android:contentDescription="@string/tab_status_description"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_calls"
            android:contentDescription="@string/tab_calls_description"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include"
        android:layout_above="@id/fragmentcontainer"
        android:clipToPadding="false"
        android:paddingTop="@dimen/list_padding"
        android:paddingBottom="@dimen/list_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_chat"/>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragmentcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true" />

</RelativeLayout>