<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/default_padding"
    tools:context=".otpAuthentication">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/large_margin"
        android:src="@drawable/mychatapplogo"
        android:contentDescription="@string/app_logo_description"
        android:importantForAccessibility="yes"/>

    <TextView
        android:id="@+id/textheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="@dimen/default_margin"
        android:fontFamily="@font/raleway"
        android:padding="@dimen/default_padding"
        android:text="@string/enter_otp_text"
        android:textAlignment="center"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textheading"
        android:layout_centerHorizontal="true"
        android:minWidth="150dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/getotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp_input_hint"
            android:inputType="number"
            android:maxLength="6"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:importantForAccessibility="yes"
            android:autofillHints="oneTimeCode"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/changenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otpInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/change_number_text"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/subtitle_text_size"
        android:padding="@dimen/small_padding"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/large_margin"
        android:paddingHorizontal="@dimen/button_padding"
        android:text="@string/verify_otp_button_text"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        android:elevation="4dp"
        app:backgroundTint="@color/button_green"/>

    <ProgressBar
        android:id="@+id/progressbarofotpauth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifyotp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:visibility="invisible"
        android:contentDescription="@string/loading_description"/>

</RelativeLayout>