<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileActivity">



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarofviewprofile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary_color"
            app:contentInsetStartWithNavigation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/backbuttonofviewprofile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/back_button_description"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/white"/>

                <TextView
                    android:id="@+id/myapptext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/backbuttonofviewprofile"
                    android:text="@string/your_profile_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressbarofviewprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movetoupdateprofile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:indicatorColor="@color/accent_color"
        android:indeterminate="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewuserimage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/nameInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="65dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/viewuserimageinimageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/defaultprofile" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/profile_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/icon_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/viewusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textSize="24sp"
            android:hint="@string/name_input_hint"
            android:inputType="textCapWords"
            android:textColor="@color/text_primary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/movetoupdateprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/update_profile_text"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        style="@style/Widget.MaterialComponents.Button"/>

</RelativeLayout>