<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/calls_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calls Feture is in future scope"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:textColor="@color/fab_background"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Placeholder for RecyclerView when implementing call list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calls_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_call"
            tools:visibility="visible"/>

        <!-- Empty state view -->
        <LinearLayout
            android:id="@+id/empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="@dimen/empty_state_icon_size"
                android:layout_height="@dimen/empty_state_icon_size"
                android:src="@drawable/ic_no_calls"
                android:contentDescription="@string/no_calls_description"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_calls_message"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/default_margin"/>

        </LinearLayout>

        <!-- FAB for making new call -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_new_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/new_call_description"
            app:srcCompat="@drawable/ic_call"
            app:backgroundTint="@color/accent_color"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>